fixed spacing on mobile buttons

--- a/src/css/_apparel.scss
+++ b/src/css/_apparel.scss
@@ -51,6 +51,7 @@
     margin-bottom:0.1em;
     padding:0.2em;
     margin:0;
+    margin-bottom:0.2em;
   }
   .apparel-selection-description{
     text-align:left;
